--- a/zorroCulpeo.css
+++ b/zorroCulpeo.css
@@ -1,15 +1,13 @@
-.ForoZorro{ 
-    width: 200px;
-    height: 200px;
-    }
-.ForoZorro2{ 
-    width: 200px;
-    height: 200px;
-    }
-.ForoZorro3{ 
-    width: 200px;
-    height: 200px;
-    }
 h1 {
     text-align: center;
+}
+.carousel-item{
+    width: 300px; /*width you want*/
+    height: 500px; /*height you want*/
+    overflow: hidden;
+}
+.carousel-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
