--- a/chincol.css
+++ b/chincol.css
@@ -1,5 +1,14 @@
-.FotoChincol{
-    width: 200px;
-    height: 200px;
-
+h1 {
+    text-align: center;
 }
+.carousel-item{
+    width: 300px; /*width you want*/
+    height: 500px; /*height you want*/
+    overflow: hidden;
+}
+.carousel-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
